--- a/src/main/webapp/common/css/supper/superBlue.css
+++ b/src/main/webapp/common/css/supper/superBlue.css
@@ -37,21 +37,21 @@ ul, ol, dl {
 }
 
 .super-navigation-title {
-    width: 210px;
+    width: 250px;
     height: 50px;
     float: left;
     line-height: 50px;
     color: #fff;
     font-size: 18px;
     font-weight: bold;
-    padding-left: 40px;
+    padding-left: 0px;
     background-color: #2980b9;
 }
 
 .super-navigation-main {
     height: 50px;
     width: 100%;
-    float: left;
+    float: right;
     line-height: 50px;
     color: #fff;
     font-size: 14px;
